--- a/modulo-4/views/pedidos/index.ejs
+++ b/modulo-4/views/pedidos/index.ejs
@@ -1,1 +1,6 @@
-<h1>Pedidos</h1>
+<h1>Rota raiz de pedidos da pizzaria do <%= nome %></h1>
+<ul>
+  <% pedidos.map((pedido)=>{ %>
+  <li>Pedido do <%= pedido.cliente.nome %> <%= pedido.cliente.sobrenome %></li>
+  <% }) %>
+</ul>
